Update git hub link

--- a/sexy-ceo.html
+++ b/sexy-ceo.html
@@ -14,7 +14,7 @@
         {{> leaderboard }}
         <hr />
         <hr />
-        <small>source: <a href="https://github.com/todo">TODO</a>.</small>
+        <small>source: <a href="https://github.com/fhk/sexy-ceo">GitHub</a>.</small>
     </div> </body>
 </template>
 
